2016-08-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodetic/__init__.py, typhon/physics/__init__.py:

	Removed constants from __all__ definition in both sub-packages.

2016-08-12  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/thermodynamics.py:

	Currently containing functions related to water vapor and its thermodynamic
	effects.

	* typhon/__init__.py: Import constants and thermodynamics.

	* typhon/physics/constants.py, typhon/geodetic/constants.py,
	typhon/constants.py:

	Combined all constant definitions in top level module.

	* typhon/datasets/_tovs_defs.py, typhon/physics/__init__.py,
	typhon/physics/em.py, typhon/geodetic/__init__.py:

	Fixed import of top level constants module.

	* doc/constants.rst, doc/geodetic.rst, doc/modules.rst, doc/physics.rst,
	doc/thermodynamics.rst:

	Updated the module list and adapted the move of the constants module.

2016-08-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodetic/__init__.py:

	Added functions to convert between cartesian and spherical coordinates.

	* typhon/geodetic/tests: Unittests for geodetic functions.

	* typhon/geodetic/tests/test_geodetic.py:

	Test the conversion between cartesian and spherical coordinates for three
	fixed points. Additionally convert coordinates back and forth.

2016-08-11  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodetic:

	Started porting the atmlab geodetic functions to python.

	* typhon/geodetic/__init__.py:

	Functions for handling geographical coordinate systems
	and reference ellipsoids.

	* typhon/geodetic/constants.py:

	Collection of physical constants and conversion factors.

	* typhon/__init__.py: Import typhon.geodetic.

	* doc/geodetic.rst: Documentation for geodetic sub-package.

	* doc/modules.rst: Added typhon.geodetic to toc.

2016-08-11  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2016-08-11  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.3.1 Release.
